--- a/dartGame/vercel.json
+++ b/dartGame/vercel.json
@@ -1,10 +1,7 @@
 {
-    "routes": [
-      { "handle": "filesystem" },
-      { "src": "/.*", "dest": "/index.html" }
-    ],
     "rewrites": [
-      { "source": "/(.*)", "destination": "/" }
+      { "source": "/(.*)", "destination": "/Html/index.html" }
     ]
   }
+  
   
